unpackaged/main/default/objects/EmailCollection__c/EmailCollection__c.object-meta.xml
<CustomObject>
    <label>EmailCollection</label>
    <nameField>
        <displayFormat>EC-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EmailCollections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>