unpackaged/main/default/objects/EmailCollection__c/fields/Email_Collection_Type__c.field-meta.xml
<CustomField>
    <fullName>Email_Collection_Type__c</fullName>
    <label>Email Collection Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Email</fullName>
                <default>true</default>
                <label>New Email</label>
            </value>
            <value>
                <fullName>Email Replacement</fullName>
            </value>
            <value>
                <fullName>Fixing Old Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>