unpackaged/main/default/objects/EmailCollection__c/fields/GiveCommission__c.field-meta.xml
<CustomField>
    <fullName>GiveCommission__c</fullName>
    <defaultValue>true</defaultValue>
    <label>GiveCommission</label>
    <type>Checkbox</type>
</CustomField>