unpackaged/main/default/objects/EmailCollection__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>EmailCollections</relationshipLabel>
    <relationshipName>EmailCollections</relationshipName>
    <type>Lookup</type>
</CustomField>