unpackaged/main/default/objects/EmailCollection__c/fields/Uncheck_Give_Commission__c.field-meta.xml
<CustomField>
    <fullName>Uncheck_Give_Commission__c</fullName>
    <formula>HYPERLINK('/apex/Uncheck_Give_Commission?eci=' &amp; Id, 'Uncheck Give Commission', '_blank')</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Uncheck Give Commission</label>
    <type>Text</type>
</CustomField>